<resources>
    <string name="app_name">Remind Me</string>
    <string name="none_paired">gpProject</string>
    <string name="title_RM_Login">Login</string>
    <string name="hint_name">Name</string>
    <string name="text_gender">Gender :</string>
    <string name="hint_number">Number</string>
    <string name="hint_birthday">Birthday</string>
    <string name="hint_key">Key</string>
    <string name="but_create_account">Create Account</string>
    <string name="title_activity_main2_navigation">Main2ActivityNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_user_log_out">Log Out</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_user_profile"></string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_history">Clear History</string>
</resources>
